--- a/index.css
+++ b/index.css
@@ -136,6 +136,9 @@ input {
 .title {
   font-weight: bold;
   text-align: center;
+  margin-bottom: 50px;
+  margin-top: 25px;
+  font-size: 40px;
 }
 
 .contact-body {
@@ -161,6 +164,7 @@ footer {
   margin: 15px;
   padding: 5px;
   align-items: center;
+  background-color: #fff;
 }
 
 .copyright-text {
